# calllens

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  ENHANCEMENTS_CHANGELOG.md  Makefile  PHASE_1_LOADER.md  PHASE_2_CATEGORIZE.md  PHASE_3_SENTIMENT.md  PHASE_4_ACTIONS.md  PHASE_4_CHURN.md  PHASE_4_TOPICS.md  PHASE_5_NOTEBOOK.md  PHASE_6_README.md  PHASE_7_SLIDES.md  README.md  START_HERE.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
data/: dataset
mcp_server/: data_store.py  governance.py  server.py
mcp_server/tools/: actions.py  churn.py  search.py  sentiment.py  topics.py
migrations/: 001_schema.sql
notebooks/: Untitled.ipynb  create_notebook.py
scripts/: build_graph.py  demo_queries.py  generate_token.py  run_mcp.sh
slides/: build_slides.js  transcript_intelligence.pptx
src/: account_journey.py  action_tracker.py  categorize.py  churn_scorer.py  evaluation.py  loader.py  sentiment.py  topic_analyzer.py  transcript_sentiment.py
src/calllens/: config.py  db.py
src/calllens/agents/: cli.py  graph.py  nodes.py  prompts.py  state.py
src/calllens/eval/: judge.py  metrics.py
src/calllens/graph/: builder.py  client.py
src/calllens/ingestion/: cli.py  models.py  parser.py  writer.py
src/calllens/llm/: provider.py
src/calllens/mcp/: auth.py  dashboard.py  permissions.py  server.py  tools.py
src/calllens/observability/: telemetry.py
tests/: conftest.py  test_account_journey.py  test_categorize.py  test_churn_scorer.py  test_evaluation.py  test_loader.py  test_reports.py  test_topic_analyzer.py  test_transcript_sentiment.py
tests/evals/: baseline_metrics.json  conftest.py  test_insight_quality.py  test_pipeline_accuracy.py
tests/fixtures/: categorization_labels.csv
tests/integration/: test_ingestion.py
tests/unit/: test_parser.py
