[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calllens"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Database
    "asyncpg>=0.29",
    "psycopg[binary,pool]>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    # Validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    # Queue
    "redis[hiredis]>=5.0",
    "rq>=1.16",
    # Observability
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-asyncpg>=0.45b0",
    # MCP server
    "mcp[cli]>=1.0",
    "PyJWT>=2.8",
    # Observability
    "langfuse>=2.0",
    # Agents
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "openai>=1.30",
    "anthropic>=0.30",
    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "factory-boy>=3.3",
]

[project.scripts]
calllens-ingest    = "calllens.ingestion.cli:ingest"
calllens-pipeline  = "calllens.agents.cli:pipeline"

[tool.hatch.build.targets.wheel]
packages = ["src/calllens"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: eval harness tests — require running DB with pipeline data",
    "llm_judge: LLM-as-judge tests — consume API credits (disabled by default)",
    "integration: integration tests — require running Postgres",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
