# Compatibility shim — lets pip<21.3 run "pip install -e ."
# pyproject.toml is the canonical build config; this file is not needed on
# Python 3.11 / pip>=21.3 (i.e., inside Docker), but harmless there.
[metadata]
name = transcript-intelligence
version = 0.1.0

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
include =
    src*
    mcp_server*
